# toradex-ti-qt-spinny

./: CMakeLists.txt  Dockerfile  build.sh  cube_widget.cpp  cube_widget.h  docker-compose.yml  main.cpp  opengl_config.h
.github/workflows/: build.yml
